Add project files

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
    <div class="form-container" id="overlay">
       <div id="popup">
          <h2>Add Student Data</h2>
+         <h2>Add Student Data</h2>
+
          <form id="data-form">
             <!-- Group 1 -->
             <div class="form-group">
